tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__can_iterate_on_graphemes.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
---
1.न
2.म
3.स्ते
