tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__can_slice_on_graphemes.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
---

स्तेमन
मस्ते
नम
