tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__inline_map_preserve_order.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
---

{"name": "Alex", "age": 42, "vip": true}
name = Alex
age = 42
vip = true
