tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/wrong_type_arg.txt
---
 Rendering error --> [tpl:1:3]
  |
1 | {{ :display_name(name=1) }}
  |    ^---
  = Component argument (type i64) does not match expected type: string
