tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@arg_not_escaped.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/arg_not_escaped.txt
---
<p>Some HTML chars & more</p>
